# mysite

./: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: login.html  profile.html  profile_update.html  register.html
accounts/templates/accounts/: login.html  profile.html  profile_update.html  register.html
chat/: forms.py  models.py  test_models.py  test_views.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: chat.html  chat_index_snippet.html  chat_input_snippet.html  index.html  post.html  read_messages_snippet.html
clickergame/: apps.py  forms.py  models.py  test_views.py  urls.py  views.py
clickergame/migrations/: 0001_initial.py  0002_room_allowed_users.py
clickergame/templates/clickergame/: create_room.html  enter_room.html  play.html
mysite/: settings.py  urls.py
static/: base.css
templates/: base.html  home.html
