[project]
name = "my-site-wwszola"
version = "1.0.0"
description = "Django exercises"
requires-python = ">=3.10"
authors = [
    {name = "Wojciech Wszola"}
]
dependencies = [
    "django>=4.2.6",
    "django-crispy-forms>=2.0.0",
    "crispy-bootstrap5>=0.7"
]

[tool.djlint]
profile = "django"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
